// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`disable border 1`] = `
<div class="zv-collapse">
  <div class="zv-collapse-item">
    <div role="button" tabindex="0" aria-expanded="false" class="zv-cell zv-cell--clickable zv-collapse-item__title">
      <div class="zv-cell__title"><span>a</span></div><i class="zv-icon zv-icon-arrow zv-cell__right-icon">
        <!----></i>
    </div>
  </div>
  <div class="zv-collapse-item zv-hairline--top">
    <div role="button" tabindex="0" aria-expanded="false" class="zv-cell zv-cell--clickable zv-collapse-item__title">
      <div class="zv-cell__title"><span>b</span></div><i class="zv-icon zv-icon-arrow zv-cell__right-icon">
        <!----></i>
    </div>
  </div>
  <div class="zv-collapse-item zv-hairline--top">
    <div role="button" tabindex="0" aria-expanded="false" class="zv-cell zv-cell--clickable zv-collapse-item__title">
      <div class="zv-cell__title"><span>c</span></div><i class="zv-icon zv-icon-arrow zv-cell__right-icon">
        <!----></i>
    </div>
  </div>
</div>
`;

exports[`lazy render collapse content 1`] = `
<div class="zv-collapse zv-hairline--top-bottom">
  <div class="zv-collapse-item" style="padding: 0px;">
    <div role="button" tabindex="0" aria-expanded="false" class="zv-cell zv-cell--clickable zv-collapse-item__title">
      <div class="zv-cell__title"><span>a</span></div><i class="zv-icon zv-icon-arrow zv-cell__right-icon">
        <!----></i>
    </div>
  </div>
  <div class="zv-collapse-item zv-hairline--top" style="padding: 0px;">
    <div role="button" tabindex="0" aria-expanded="true" class="zv-cell zv-cell--clickable zv-collapse-item__title zv-collapse-item__title--expanded">
      <div class="zv-cell__title"><span>b</span></div><i class="zv-icon zv-icon-arrow zv-cell__right-icon">
        <!----></i>
    </div>
    <div class="zv-collapse-item__wrapper">
      <div class="zv-collapse-item__content">content</div>
    </div>
  </div>
</div>
`;

exports[`render collapse-item slot 1`] = `
<div class="zv-collapse zv-hairline--top-bottom">
  <div class="zv-collapse-item">
    <div role="button" tabindex="0" aria-expanded="false" class="zv-cell zv-cell--clickable zv-collapse-item__title">this is icon<div class="zv-cell__title">this is title</div>
      <div class="zv-cell__value">this is value</div>this is right icon
    </div>
  </div>
</div>
`;
